2002-06-26  Christopher Faylor  <cgf@redhat.com>

	* cygheap.cc (cygheap_user::set_name): Avoid clearing things when just
	setting name to itself or during first time initialization.

	* environ.cc (check_case_init): Make case insensitive.

2002-06-26  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_socket::bind): Add method definition.
	(fhandler_socket::connect): Ditto.
	(fhandler_socket::listen): Ditto.
	(fhandler_socket::accept): Ditto.
	(fhandler_socket::getsockname): Ditto.
	(fhandler_socket::getpeername): Ditto.
	(fhandler_socket::recvfrom): Ditto.
	(fhandler_socket::recvmsg): Ditto.
	(fhandler_socket::sendto): Ditto.
	(fhandler_socket::sendmsg): Ditto.
	(fhandler_socket::shutdown): Ditto.
	* fhandler_socket.cc (get_inet_addr): Move here from net.cc.
	(fhandler_socket::bind): New method.
	(fhandler_socket::connect): Ditto.
	(fhandler_socket::listen): Ditto.
	(fhandler_socket::accept): Ditto.
	(fhandler_socket::getsockname): Ditto.
	(fhandler_socket::getpeername): Ditto.
	(fhandler_socket::recvfrom): Ditto.
	(fhandler_socket::recvmsg): Ditto.
	(fhandler_socket::sendto): Ditto.
	(fhandler_socket::sendmsg): Ditto.
	(fhandler_socket::shutdown): Ditto.
	* net.cc: Various formatting cleanups throughout.
	(get_inet_addr): Move to fhandler_socket.cc.
	(cygwin_bind): Move base functionality to appropriate fhandler_socket
	method.
	(cygwin_connect): Ditto.
	(cygwin_listen): Ditto.
	(cygwin_accept): Ditto.
	(cygwin_getsockname): Ditto.
	(cygwin_getpeername): Ditto.
	(cygwin_recvfrom): Ditto.
	(cygwin_recvmsg): Ditto.
	(cygwin_sendto): Ditto.
	(cygwin_sendmsg): Ditto.
	(cygwin_shutdown): Ditto.

2002-06-26  Corinna Vinschen  <corinna@vinschen.de>

	* pwdgrp.h (pwdgrp_read::~pwdgrp_read): Avoid compiler warning.

2002-06-26  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (_dcrt0): Be more defensive when reserved block is used and
	it's not cygwin info.

2002-06-26  Christopher Faylor  <cgf@redhat.com>
