@@ -440,12 +440,14 @@ cygheap_user::~cygheap_user ()
 void
 cygheap_user::set_name (const char *new_name)
 {
-  if (strcasematch (new_name, pname))
-    return;		/* nothing changed */
-
   bool allocated = !!pname;
+
   if (allocated)
-    cfree (pname);
+    {
+      if (strcasematch (new_name, pname))
+	return;
+      cfree (pname);
+    }
 
   pname = cstrdup (new_name ? new_name : "");
   if (!allocated)
